tests/golden/type_errors/array_reduce_callback_element_mismatch.cd
fun bad(acc: number, value: string): number {
  return acc;
}
reduce([1], 0, bad);
